--- a/app/src/main/res/layout/fragment_new_text.xml
+++ b/app/src/main/res/layout/fragment_new_text.xml
@@ -41,7 +41,7 @@
             android:layout_margin="@dimen/fab_margin"
             android:clickable="true"
             app:elevation="@dimen/fab_elevation"
-            app:fabSize="mini"
+            app:fabSize="normal"
             app:srcCompat="@drawable/ic_plus_white_48dp"/>
     </LinearLayout>
 
